--- a/src/main/java/Views/allEmployers.fxml
+++ b/src/main/java/Views/allEmployers.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -23,4 +24,7 @@
          </padding>
       </VBox>
    </top>
+   <bottom>
+      <Button fx:id="showOnlyMyEmployersButton" mnemonicParsing="false" onAction="#onClickShowOnlyMyEmployers" text="Show Only My Employers" BorderPane.alignment="CENTER" />
+   </bottom>
 </BorderPane>
